Revision history for CGI-Info

0.105
	carp for warning when logger not set
	Flag Google-InspectionTool as a search_engine
	Added "Fuzz Faster U Fool" as a bot
	Also look in SSL_TLS_SNI for hostname

0.104	Fri Jun 20 07:41:53 EDT 2025
	Bumped minimum version of Config::Abstraction - and hence removed MD5_CTX workaround code
	Flag Alibaba as a search engine
	Use Object::Configure instead of Class::Debug
	Allow IS_SEARCH_ENGINE and IS_MOBILE to be set in the environment

0.103	Fri May 16 17:48:32 EDT 2025
	Mark Clickagy as a bot
	Don't use notice() since Log::Log4perl doesn't understand it
	Added the cache() method
	Workaround "(in cleanup) Failed to get MD5_CTX pointer" issue
	Enhanced allow parameter with subroutine support

0.102	Thu May  8 21:39:31 EDT 2025
	Use Class::Debug

0.101	Mon May  5 11:09:29 EDT 2025
	Try hard to find the config files - should be in Config::Abstraction
	Called 1.00 to work around version control which things 'dot' is the same as 'decimal point'

0.100	Sat May  3 21:16:56 EDT 2025
	Pave the way for the latest Config::Abstraction

0.99	Wed Apr 23 07:55:03 EDT 2025
	Don't try to read from the terminal when not interactive
	Added t/config.t
	Use Params::Get in new()
	Block SQL injections using /**/ instead of spaces to separate keywords

0.98	Tue Apr 15 13:39:22 EDT 2025
	Allow AUTOLOAD in subclasses
	Use Config::Abstraction instead of Config::Auto
	Fix http://www.cpantesters.org/cpan/report/00f6f172-6d25-1014-9d67-b345cf55203a

0.97	Fri Mar 28 07:56:10 EDT 2025
	Not all loggers (e.g. Log::Any) can cope with a reference to an ARRAY
	Added config_file argument to new()
	Added logdir() sanity checks
	Improved blocking for directory traversal attacks
	Fix auto_load calling unknown routine isFalse

0.96	Mon Mar 17 08:11:48 EDT 2025
	Use Log::Abstraction
	Added the auto_load parameter to disable AUTOLOAD

0.95	Sun Mar  2 19:52:56 EST 2025
	Use Params::Get

0.94	Fri Feb 28 12:24:30 EST 2025
	number types can also have min and max values